--- a/mernapp/public/index.html
+++ b/mernapp/public/index.html
@@ -26,7 +26,7 @@
     -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-dark.min.css" rel="stylesheet">
     <link href="https://db.onlinewebfonts.com/c/f21923cb0f60b46d41a66875255790b3?family=Neue+Haas+Grotesk+Display+Pro+65+Medium" rel="stylesheet" type="text/css"/>
-    <title>React App</title>
+    <title>GoFood</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
